# CPP-Reflection

./: .gitignore  CMakeLists.txt
Examples/: CMakeLists.txt
Source/Parser/: CMakeLists.txt
Source/Runtime/: CMakeLists.txt  TypeInfo.h
